--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "deploy": "astro build && npx gh-pages -d dist"
+    "deploy": "astro build && npx gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "@astrojs/starlight": "^0.36.2",
