--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "deploy": "astro build && npx gh-pages -d dist --dotfiles"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/starlight": "^0.36.2",
     "astro": "^5.6.1",
-    "sharp": "^0.34.2"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "sharp": "^0.34.4"
   }
 }
